feat: add delete message of chat
